[omnibox] Narrow condition for resetting selection

Previously, we were resetting the selection if text could have been
changed. Now, only do so if we spot difference. Fixes cursor location
after an alt-tab focus change.

BUG=701519

Review-Url: https://codereview.chromium.org/2763063002
Cr-Commit-Position: refs/heads/master@{#467499}

Former-commit-id: 83a82e0c55fca9efc29c89dd5852fdbfe6118889